--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.0",
     "redux-logger": "^3.0.6",
+    "sass": "^1.89.2",
     "styled-components": "5.3.5",
     "sweetalert2": "11.4.23",
     "swiper": "8.3.1",
