--- a/package.json
+++ b/package.json
@@ -4,30 +4,31 @@
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@material-ui/core": "4.12.3",
     "@mui/icons-material": "5.8.4",
     "@mui/joy": "^5.0.0-beta.52",
     "@mui/lab": "^7.0.0-beta.11",
-    "@mui/material": "^7.0.2",
+    "@mui/material": "^7.2.0",
     "@reduxjs/toolkit": "^1.8.1",
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.27.2",
+    "axios": "^1.10.0",
     "moment": "2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.8",
     "react-router-dom": "^5.3.4",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.1",
     "redux-logger": "^3.0.6",
     "sass": "^1.89.2",
     "styled-components": "5.3.5",
-    "sweetalert2": "11.4.23",
+    "sweetalert2": "^11.22.2",
     "swiper": "8.3.1",
     "typescript": "~4.1.5",
-    "universal-cookie": "4.0.4",
+    "universal-cookie": "^8.0.1",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
@@ -63,5 +64,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "license": "MIT"
 }
