--- a/package.json
+++ b/package.json
@@ -2,50 +2,52 @@
   "name": "booknest-react",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.1",
-    "@material-ui/core": "4.12.3",
-    "@mui/icons-material": "5.8.4",
-    "@mui/joy": "^5.0.0-beta.52",
-    "@mui/lab": "^7.0.0-beta.11",
-    "@mui/material": "^7.2.0",
-    "@reduxjs/toolkit": "^1.8.1",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "axios": "^1.10.0",
-    "moment": "2.29.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.0.0",
-    "react-redux": "^7.2.8",
-    "react-router-dom": "^5.3.4",
-    "react-scripts": "^5.0.1",
-    "redux-logger": "^3.0.6",
-    "sass": "^1.89.2",
-    "styled-components": "5.3.5",
-    "sweetalert2": "^11.22.2",
-    "swiper": "8.3.1",
-    "typescript": "~4.1.5",
-    "universal-cookie": "^8.0.1",
-    "web-vitals": "^2.1.4"
-  },
-  "devDependencies": {
-    "@types/axios": "^0.14.4",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^17.0.45",
-    "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
-    "@types/react-router-dom": "^5.3.3",
-    "@types/redux-logger": "^3.0.13",
-    "@types/styled-components": "^5.1.34"
-  },
+  "license": "MIT",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.1",
+    "@mui/joy": "^5.0.0-beta.52",
+    "@mui/lab": "^5.0.0-alpha.155",
+    "@mui/material": "^7.3.1",
+    "@reduxjs/toolkit": "^2.2.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
+    "axios": "^1.6.2",
+    "moment": "^2.29.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^6.20.1",
+    "react-scripts": "5.0.1",
+    "redux-logger": "^3.0.6",
+    "sass": "^1.69.5",
+    "socket.io-client": "^4.7.5",
+    "styled-components": "^6.1.1",
+    "sweetalert2": "^11.10.1",
+    "swiper": "^11.0.5",
+    "typescript": "^5.3.2",
+    "universal-cookie": "^8.0.1",
+    "web-vitals": "^3.5.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.8",
+    "@types/node": "^20.9.0",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
+    "@types/react-redux": "^7.1.34",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/redux-logger": "^3.0.13",
+    "@types/socket.io-client": "^3.0.0",
+    "@types/styled-components": "^5.1.34"
   },
   "eslintConfig": {
     "extends": [
@@ -64,6 +66,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "license": "MIT"
+  }
 }
